--- a/.github/workflows/cmake-mac.yml
+++ b/.github/workflows/cmake-mac.yml
@@ -51,7 +51,7 @@ jobs:
       run: brew install expat
 
     - name: Install FUSE manually
-      run: brew install libfuse2
+      run: brew install libfuse@2
 
     - name: Install expat
       run: brew install expat
