--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -56,20 +56,17 @@ jobs:
       with:
         submodules: 'recursive'
 
-    # - name: Checkout vscp repo
-    #   uses: actions/checkout@v4
-    #   with:
-    #     repository: grodansparadis/vscp
-    #     path: ${{ github.workspace }}
-    #     ref: development  
-    #     submodules: recursive   
+    # Install latest CMake and Ninja.
+    - uses: lukka/get-cmake@latest
+    # Or pin to a specific CMake version:
+    # lukka/get-cmake@v3.27
 
-    # - name: Install vcpkg
-    #   uses: lukka/run-vcpkg@v2
-    #   with:
-    #     vcpkgDirectory: 'C:/vcpkg/'
-    #     vcpkgArguments: '@C:/vcpkg/.txt'
-    #     appendedCacheKey: ${{ hashFiles(env.vcpkgResponseFile) }}
+    - name: Install vcpkg
+      uses: lukka/run-vcpkg@v11
+      with:
+        vcpkgDirectory: 'C:/vcpkg/'
+        vcpkgArguments: '@C:/vcpkg/.txt'
+        appendedCacheKey: ${{ hashFiles(env.vcpkgResponseFile) }}
 
     # Install latest CMake.
     - name: Get latest CMake and ninja
@@ -85,6 +82,10 @@ jobs:
         vcpkgTriplet: '${{ env.TRIPLET }}'
         # Ensure the vcpkg artifacts are cached, they are generated in the 'CMAKE_BINARY_DIR/vcpkg_installed'.
         additionalCachedPaths: '${{ env.buildDir }}/vcpkg_installed'
+        # <--= optional, use the latest release candidate (notice the 'rc' suffix).
+        cmakeVersion: latestrc      
+        # <--= optional, use the latest release (non candidate).
+        ninjaVersion: latest        
 
     - name: Add MSBuild to PATH
       uses: microsoft/setup-msbuild@v2
@@ -127,6 +128,42 @@ jobs:
         C:/vcpkg/vcpkg.exe install openssl:x64-windows
         C:/vcpkg/vcpkg.exe install paho-mqtt:x64-windows
         C:/vcpkg/vcpkg.exe install libwebsockets:x64-windows
+
+    - name: Run CMake consuming CMakePreset.json and run vcpkg to build packages
+        uses: lukka/run-cmake@v10
+        with:
+          # This is the default path to the CMakeLists.txt along side the
+          # CMakePresets.json. Change if you need have CMakeLists.txt and CMakePresets.json
+          # located elsewhere.
+          # cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
+
+          # You could use CMake workflow presets defined in the CMakePresets.json
+          # with just this line below. Note this one cannot be used with any other
+          # preset input, it is mutually exclusive.
+          # workflowPreset: 'workflow-name'
+
+          # This is the name of the CMakePresets.json's configuration to use to generate
+          # the project files. This configuration leverages the vcpkg.cmake toolchain file to
+          # run vcpkg and install all dependencies specified in vcpkg.json.
+          configurePreset: 'ninja-multi-vcpkg'
+          # Additional arguments can be appended to the cmake command.
+          # This is useful to reduce the number of CMake's Presets since you can reuse
+          # an existing preset with different variables.
+          configurePresetAdditionalArgs: "['-DENABLE_YOUR_FEATURE=1']"
+
+          # This is the name of the CMakePresets.json's configuration to build the project.
+          buildPreset: 'ninja-multi-vcpkg'
+          # Additional arguments can be appended when building, for example to specify the
+          # configuration to build.
+          # This is useful to reduce the number of CMake's Presets you need in CMakePresets.json.
+          buildPresetAdditionalArgs: "['--config Release']"
+
+          # This is the name of the CMakePresets.json's configuration to test the project with.
+          testPreset: 'ninja-multi-vcpkg'
+          # Additional arguments can be appended when testing, for example to specify the config
+          # to test.
+          # This is useful to reduce the number of CMake's Presets you need in CMakePresets.json.
+          testPresetAdditionalArgs: "['--config Release']"    
 
     - name: Configure CMake and build
       run: |    
