--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,10 +75,15 @@
     "fstream": "cpp",
     "bitset": "cpp",
     "hash_map": "cpp",
-    "unordered_set": "cpp"
+    "unordered_set": "cpp",
+    "hash_set": "cpp"
   },
   "cmake.configureEnvironment": {
-    "CMAKE_PREFIX_PATH": "~/Qt/6.7.2/gcc_64"
+    "CMAKE_PREFIX_PATH": "~/Qt/6.8.0/gcc_64",
+    "QT6_DIR": "~/Qt/6.8.0/gcc_64"
   },
-  "cmake.clearOutputBeforeBuild": false
+  "cmake.clearOutputBeforeBuild": false,
+  "cSpell.words": [
+    "workerthread"
+  ]
 }
