--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,9 @@
 [submodule "third_party/json"]
 	path = third_party/json
 	url = https://github.com/nlohmann/json.git
+[submodule "third_party/vscp"]
+	path = third_party/vscp
+	url = https://github.com/grodansparadis/vscp.git
+[submodule "third_party/vscp-firmware"]
+	path = third_party/vscp-firmware
+	url = https://github.com/grodansparadis/vscp-firmware.git
